return total amount of elements in get courses list